fix switch on safari

--- a/index.css
+++ b/index.css
@@ -51,6 +51,10 @@ footer {
   top: 0;
 }
 
+.top-bar-link, .top-bar-title {
+  font-size: 18px;
+}
+
 .header {
   text-align: center;
   padding: 0.5rem 0;
